# mymct

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
include/: file_parse.h  mymct.h
lib/: Makefile.am
src/: file_parse.c  mymct.c
